--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -120,6 +120,10 @@
     <string name="bluetooth_disable_leaudio" msgid="8619410595945155354">"બ્લૂટૂથ LE ઑડિયો બંધ કરો"</string>
     <string name="bluetooth_disable_leaudio_summary" msgid="4756307633476985470">"જો ડિવાઇસ LE ઑડિયો હાર્ડવેર ક્ષમતાઓને સપોર્ટ કરતું હોય, તો બ્લૂટૂથ LE ઑડિયો સુવિધા બંધ કરે છે."</string>
     <string name="bluetooth_leaudio_mode" msgid="5206961943393400814">"બ્લૂટૂથ LE ઑડિયો મોડ"</string>
+    <!-- no translation found for bluetooth_leaudio_broadcast_ui (3205637582933819543) -->
+    <skip />
+    <!-- no translation found for bluetooth_leaudio_broadcast_ui_summary (3616202872693209662) -->
+    <skip />
     <string name="bluetooth_show_leaudio_device_details" msgid="3306637862550475370">"ડિવાઇસની વિગતોમાં LE ઑડિયો ટૉગલ બતાવો"</string>
     <string name="bluetooth_bypass_leaudio_allowlist" msgid="7392319491894565552">"બ્લૂટૂથ LE ઑડિયો માટેની વ્હાઇટલિસ્ટને બાયપાસ કરો"</string>
     <string name="bluetooth_bypass_leaudio_allowlist_summary" msgid="8999245286359656738">"વ્હાઇટલિસ્ટના માપદંડનું પાલન કરવા માટે LE ઑડિયો પેરિફેરલની ચકાસણી કરવામાં આવી ન હોય, તો પણ ડિફૉલ્ટ તરીકે LE ઑડિયોનો ઉપયોગ કરો."</string>
@@ -1834,7 +1838,7 @@
     <string name="filter" msgid="9039576690686251462">"ફિલ્ટર"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"ફિલ્ટર વિકલ્પો પસંદ કરો"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"બધી ઍપ"</string>
-    <string name="filter_apps_disabled" msgid="5068011814871004105">"બંધ કરેલી ઍપ્લિકેશનો"</string>
+    <string name="filter_apps_disabled" msgid="5068011814871004105">"બંધ કરેલી ઍપ"</string>
     <string name="filter_apps_third_party" msgid="9049447784849114843">"ડાઉનલોડ કરેલા"</string>
     <string name="filter_apps_running" msgid="535465683273284141">"ચાલે છે"</string>
     <string name="not_installed" msgid="5074606858798519449">"આ વપરાશકર્તા માટે ઇન્સ્ટોલ કરેલ નથી"</string>
@@ -1949,26 +1953,37 @@
     <string name="bounce_keys_summary" msgid="7418024428905737729">"એક જ કીને વારંવાર ઝડપથી દબાવવાની પ્રક્રિયાની કીબોર્ડ અવગણના કરે છે"</string>
     <string name="bounce_keys_dialog_title" msgid="4088646362538368693">"બાઉન્સ કી સંબંધિત મર્યાદા"</string>
     <string name="bounce_keys_dialog_subtitle" msgid="5640575860258120026">"વારંવાર દબાવવામાં આવતી તમારા કીબોર્ડની કીને અવગણવા માટે જરૂરી અવધિ પસંદ કરો"</string>
-    <!-- no translation found for input_setting_keys_dialog_option_200 (3121006986226247560) -->
-    <skip />
-    <!-- no translation found for input_setting_keys_dialog_option_400 (2634500629396699440) -->
-    <skip />
-    <!-- no translation found for input_setting_keys_dialog_option_600 (3828362866751805146) -->
-    <skip />
-    <!-- no translation found for input_setting_keys_custom_title (670425691119253202) -->
-    <skip />
-    <!-- no translation found for input_setting_keys_custom_value (4455905650507193648) -->
-    <skip />
+    <string name="input_setting_keys_dialog_option_200" msgid="3121006986226247560">"0.2 સેકન્ડ"</string>
+    <string name="input_setting_keys_dialog_option_400" msgid="2634500629396699440">"0.4 સેકન્ડ"</string>
+    <string name="input_setting_keys_dialog_option_600" msgid="3828362866751805146">"0.6 સેકન્ડ"</string>
+    <string name="input_setting_keys_custom_title" msgid="670425691119253202">"કસ્ટમ"</string>
+    <string name="input_setting_keys_custom_value" msgid="4455905650507193648">"કસ્ટમ મૂલ્ય"</string>
     <string name="slow_keys" msgid="2891452895499690837">"ધીમી કી"</string>
     <string name="slow_keys_summary" msgid="2914214326648535377">"કોઈ કીને દબાવવાથી સક્રિય થવામાં લાગતા સમયમાં વધઘટ કરે છે"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"સ્ટીકી કી"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"શૉર્ટકટ માટે કીને એકસાથે દબાવી રાખવાને બદલે એક સમયે એક જ કી દબાવો"</string>
     <string name="mouse_keys" msgid="6237254627808525540">"માઉસની કી"</string>
+    <!-- no translation found for mouse_keys_main_title (3570638931365221460) -->
+    <skip />
     <string name="mouse_keys_summary" msgid="7030731235143286467">"પૉઇન્ટરનું નિયંત્રણ કરવા માટે, તમારા કીબોર્ડનો ઉપયોગ કરો"</string>
     <string name="mouse_reverse_vertical_scrolling" msgid="154907817154779952">"માઉસનું રિવર્સ સ્ક્રોલિંગ"</string>
     <string name="mouse_reverse_vertical_scrolling_summary" msgid="3386655598642587942">"પેજને નીચે લઈ જવા માટે ઉપર સ્ક્રોલ કરો"</string>
     <string name="mouse_swap_primary_button" msgid="3028204969091057207">"ડાબા અને જમણા બટનને સ્વૉપ કરો"</string>
     <string name="mouse_swap_primary_button_summary" msgid="3276638019321067902">"માઉસના ડાબા બટનનો ઉપયોગ તમારા જમણા બટન તરીકે કરો"</string>
+    <!-- no translation found for mouse_key_main_page_title (8051692181770475257) -->
+    <skip />
+    <!-- no translation found for mouse_keys_directional_summary (8108444346340180562) -->
+    <skip />
+    <!-- no translation found for mouse_keys_click_summary (1642125742164614577) -->
+    <skip />
+    <!-- no translation found for mouse_keys_press_hold_summary (2313418505798763112) -->
+    <skip />
+    <!-- no translation found for mouse_keys_release_summary (2379239679203818720) -->
+    <skip />
+    <!-- no translation found for mouse_keys_toggle_scroll_summary (8129249227018251990) -->
+    <skip />
+    <!-- no translation found for mouse_keys_release2_summary (2395196580659122185) -->
+    <skip />
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"કીબોર્ડ શૉર્ટકટ"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"શૉર્ટકટની સૂચિ બતાવો"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"કાર્યાલયનું પ્રોફાઇલ અને સાધનો"</string>
@@ -2572,6 +2587,10 @@
     <string name="controls_subtitle" msgid="3759606830916441564">"પાવર વપરાશ સમાયોજિત કરો"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"સમાવિષ્ટ પૅકેજીસ"</string>
     <string name="battery_tip_summary_title" msgid="321127485145626939">"ઍપ સામાન્ય રીતે ચાલી રહી છે"</string>
+    <!-- no translation found for battery_tip_replacement_title (3932335880485957919) -->
+    <skip />
+    <!-- no translation found for battery_tip_replacement_summary (7892640031317153349) -->
+    <skip />
     <string name="battery_tip_low_battery_title" msgid="4155239078744100997">"બૅટરીનું લેવલ ઓછું છે"</string>
     <string name="battery_tip_low_battery_summary" msgid="2629633757244297436">"બૅટરીની આવરદા વધારવા માટે બૅટરી સેવર ચાલુ કરો"</string>
     <string name="battery_tip_smart_battery_title" msgid="8925025450214912325">"બૅટરીની આવરદા વધારો"</string>
@@ -3412,7 +3431,8 @@
     <string name="zen_mode_select_schedule_time_example" msgid="2690518300573994725">"\"અઠવાડિયાના દિવસોમાં સવારે 9થી સાંજે 5 વાગ્યા સુધી\""</string>
     <string name="zen_mode_select_schedule_calendar" msgid="8098396764270136497">"કૅલેન્ડર ઇવેન્ટ"</string>
     <string name="zen_modes_summary_some_active" msgid="4780578487747956559">"{count,plural,offset:2 =0{}=1{{mode_1} સક્રિય છે}=2{{mode_1} અને {mode_2} સક્રિય છે}=3{{mode_1}, {mode_2} અને {mode_3} સક્રિય છે}one{{mode_1}, {mode_2} અને વધુ # સક્રિય છે}other{{mode_1}, {mode_2} અને વધુ # સક્રિય છે}}"</string>
-    <string name="zen_modes_summary_none_active" msgid="7076119084658457243">"{count,plural, =0{}=1{1 મોડ ઑટોમૅટિક રીતે ચાલુ થઈ શકે છે}one{# મોડ ઑટોમૅટિક રીતે ચાલુ થઈ શકે છે}other{# મોડ ઑટોમૅટિક રીતે ચાલુ થઈ શકે છે}}"</string>
+    <!-- no translation found for zen_modes_summary (2576893588489258390) -->
+    <skip />
     <string name="zen_mode_active_text" msgid="5002406772481439437">"ચાલુ"</string>
     <string name="zen_mode_disabled_needs_setup" msgid="389269759040103728">"સેટ નથી"</string>
     <string name="zen_mode_disabled_by_user" msgid="138592173630683253">"બંધ છે"</string>
@@ -3762,7 +3782,7 @@
     <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"આ ઍપ નોટિફિકેશન મોકલતી નથી"</string>
     <string name="notification_channels" msgid="1502969522886493799">"કૅટેગરી"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"અન્ય"</string>
-    <string name="no_channels" msgid="4716199078612071915">"આ ઍપએ કોઈ નોટિફિકેશન પોસ્ટ કરી નથી"</string>
+    <string name="no_channels" msgid="4716199078612071915">"આ ઍપ દ્વારા કોઈ નોટિફિકેશન પોસ્ટ થઈ નથી"</string>
     <string name="no_recent_channels" msgid="5068574296267584043">"બિનવપરાયેલી કૅટેગરી બતાવો"</string>
     <string name="app_settings_link" msgid="6725453466705333311">"ઍપમાંના વધારાના સેટિંગ"</string>
     <string name="show_unused_channels" msgid="4956292847964439078">"બિનવપરાયેલી કૅટેગરી બતાવો"</string>
@@ -5344,7 +5364,7 @@
     <string name="grammatical_gender_title" msgid="8584242850477270828">"વ્યાકરણ અનુસારનું લિંગ"</string>
     <string name="grammatical_gender_dialog_title" msgid="8754048592099871587">"વ્યાકરણ અનુસારનું લિંગ પસંદ કરો"</string>
     <string name="content_protection_preference_title" msgid="5069260032659193074">"ભ્રામક ઍપ માટે સ્કૅન કરી રહ્યાં છીએ"</string>
-    <string name="content_protection_preference_summary" msgid="2252393849408445391">"ફિશિંગ માટે ઍપ પ્રવૃત્તિ ચેક કરો"</string>
+    <string name="content_protection_preference_summary" msgid="2252393849408445391">"ફિશિંગ માટે ઍપ ઍક્ટિવિટી ચેક કરો"</string>
     <string name="content_protection_preference_user_consent_switch_title" msgid="1797782616799594426">"ભ્રામક ઍપ માટે સ્કૅનિંગનો ઉપયોગ કરો"</string>
     <string name="content_protection_preference_user_consent_work_profile_switch_title" msgid="3004347470520916069">"ઑફિસ સંબંધિત ઍપ માટે સ્કૅનિંગનો ઉપયોગ કરો"</string>
     <string name="content_protection_preference_subpage_summary" msgid="3595621220981703364"></string>
@@ -5468,12 +5488,9 @@
     <string name="contacts_storage_device_only_preference_label" msgid="970250816918108264">"ફક્ત ડિવાઇસ"</string>
     <string name="contacts_storage_device_only_preference_summary" msgid="2339782491812039153">"નવા સંપર્કોને કોઈ એકાઉન્ટ સાથે સિંક કરવામાં આવશે નહીં"</string>
     <string name="contacts_storage_selection_message" msgid="8082077300632059003">"ડિફૉલ્ટ તરીકે, સંપર્કોને તમારા ડિવાઇસમાં સાચવવામાં આવશે અને તેને તમારા એકાઉન્ટ સાથે સિંક કરવામાં આવશે"</string>
-    <!-- no translation found for contacts_storage_set_default_account_error_message (849847649756411393) -->
-    <skip />
-    <!-- no translation found for contacts_storage_no_account_set_summary (7454973781666475276) -->
-    <skip />
-    <!-- no translation found for contacts_storage_local_account_summary (5034805108128685712) -->
-    <skip />
+    <string name="contacts_storage_set_default_account_error_message" msgid="849847649756411393">"ડિફૉલ્ટ એકાઉન્ટ સેટ કરવામાં ભૂલ આવી"</string>
+    <string name="contacts_storage_no_account_set_summary" msgid="7454973781666475276">"કોઈ ડિફૉલ્ટ સેટ નથી"</string>
+    <string name="contacts_storage_local_account_summary" msgid="5034805108128685712">"ફક્ત ડિવાઇસ"</string>
     <string name="contacts_storage_first_time_add_account_message" msgid="5161093169928132323">"શરૂ કરવા માટે કોઈ એકાઉન્ટ ઉમેરો"</string>
     <string name="search_gesture_feature_title" msgid="7037117019612710960">"શોધવા માટે વર્તુળ દોરો"</string>
     <string name="search_gesture_feature_summary" msgid="1793056495030564014">"તમારી સ્ક્રીન પરના કન્ટેન્ટનો ઉપયોગ કરીને શોધવા માટે હોમ બટનને અથવા નૅવિગેશન હૅન્ડલને ટચ કરીને થોડીવાર દબાવી રાખો."</string>
